--- a/style/globals.css
+++ b/style/globals.css
@@ -24,8 +24,8 @@ body {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   -webkit-tap-highlight-color: transparent;
   font-size: 16px;
-  color: #000;
-  background-color: #fff;
+  color: var(--dark);
+  background-color: var(--beige);
 }
 
 
@@ -91,8 +91,10 @@ iframe {
 Чтобы контент не прижимался к краям экрана
 */
 
+/** Lets make layout Mobile 1st */
 .container {
-  max-width: 1240px;
+  min-width: 320px;
+  max-width: 1300px;
   padding: 0 30px;
   margin: 0 auto;
 }
