--- a/style/globals.css
+++ b/style/globals.css
@@ -1,31 +1,31 @@
 /** https://codepen.io/Quper/pen/GRRZzWy */
 
-html {
-  position: relative;
-  box-sizing: border-box;
-}
-
 *,
 *::before,
 *::after {
   box-sizing: inherit;
 }
 
+html {
+  position: relative;
+  box-sizing: border-box;
+}
+
+
 body {
   position: relative;
   overflow-x: hidden;
   min-width: 320px;
   min-height: 100vh;
-  font-family: Nunito;
-  /* font-family: Arial, sans-serif; */
+  font-family: Nunito, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   -webkit-tap-highlight-color: transparent;
   font-size: 16px;
-  color: var(--dark);
-  background-color: var(--beige);
+  color: var(--dark, #2c2826);
+  background-color: var(--beige, #c1ab91);
 }
 
 
@@ -37,6 +37,7 @@ svg {
 }
 
 svg {
+  display: block;
   max-height: 100%;
 }
 
@@ -72,10 +73,8 @@ iframe {
   border: none;
 }
 
-/*
-Доступно скрываю элементы
-*/
 
+/* Доступно скрываю элементы */
 .visually-hidden {
   position: fixed;
   transform: scale(0);
@@ -84,17 +83,19 @@ iframe {
 
 /*
 Пример контейнера
-
-Если контейнер 1180px по макету,
-то для max-width прибавляем паддинги 30px*2, 
-в итоге 1240px
-Чтобы контент не прижимался к краям экрана
+Если контейнер 1240px по макету, то для max-width прибавляем паддинги 30px*2, 
+в итоге 1300px Чтобы контент не прижимался к краям экрана
 */
 
 /** Lets make layout Mobile 1st */
 .container {
-  min-width: 320px;
-  max-width: 1300px;
-  padding: 0 30px;
+  --offset-container: 14px;
+  max-width: calc(var(--offset-container) * 2 + 1300px);
+  padding: 0 var(--offset-container);
   margin: 0 auto;
+}
+
+/* for sprite */
+.svg-sprite {
+  display: none;
 }
