--- a/style/globals.css
+++ b/style/globals.css
@@ -23,9 +23,11 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   -webkit-tap-highlight-color: transparent;
+  font-weight: 400;
   font-size: 16px;
-  color: var(--dark, #2c2826);
-  background-color: var(--beige, #c1ab91);
+  color: var(--dark);
+  background-color: var(--light);
+  line-height: 1.4;
 }
 
 
@@ -89,7 +91,18 @@ iframe {
 
 /** Lets make layout Mobile 1st */
 .container {
-  --offset-container: 14px;
+  border: 1px solid lawngreen;
+  
+  @media (min-width: 768px) {
+    border: 1px solid orangered;
+  }
+  
+  @media (min-width: 1440px) {
+    border: 1px solid magenta;
+  }
+}
+
+.container {
   max-width: calc(var(--offset-container) * 2 + 1300px);
   padding: 0 var(--offset-container);
   margin: 0 auto;
