--- a/style/hero.css
+++ b/style/hero.css
@@ -1,22 +1,32 @@
 .hero {
   display: block;
   position: relative;
-  min-height: 460px;
   padding-top: 80px;
-  margin-bottom: 43px;
-  border-radius: 0 0 16px 16px;
-  background-color: var(--orange);
+  padding-bottom: 212px;
   background-image: linear-gradient(46.60deg, rgb(235, 138, 20) 13.36%,rgb(236, 213, 90) 101.748%);
+  background-color: var(--orange);
+  border-radius: 0 0 16px 16px;
+  margin-bottom: 43px;
 }
-.hero::after {
+
+
+.hero__container {
+  display: block;
+  /* border: 1px solid green; */
+  z-index: 4;
+}
+.hero__container::after {
   display: block;
   content: "";
   position: absolute;
-  right: calc(var(--offset-container) + 7px);
-  right: 0;
   bottom: -43px;
-  width: 261px;
-  height: 230px;
+  right: calc(var(--offset-container) + 7px);
+  min-width: 261px;
+  min-height: 230px;
+  width: calc(100vw / (320 / 261));
+  height: calc(100vw / (320 / 230));
+  max-width: 382px;
+  max-height: 337px;
   background-image: url('../img/cheese-slice-pizza.png');
   background-size: contain;
   background-position: center;
@@ -24,45 +34,32 @@
   background-color: transparent;
 }
 
-.hero__container {
-  display: flex;
-}
-
 
 .hero__content {
-  border: 1px solid wheat;
+  position: relative;
   max-width: 300px;
+  z-index: 4;
 }
 
 
 .hero__title {
-  color: #2c2826;
   font-weight: 900;
   font-size: 38px;
   line-height: 1;
+  color: var(--dark);
   margin-bottom: 12px;
 }
 
+
 .hero__tagline {
   display: block;
-  position: relative;
-  font-size: 14px;
-  line-height: 140%;
-  padding-left: calc(12px + 20px);
+  color: var(--dark);
   margin-bottom: 24px;
-}
-.hero__tagline::before {
-  display: block;
-  width: 19px;
-  height: 16px;
-  content: "";
-  position: absolute;
-  top: 2px;
-  left: 0;
+  font-size: 14px;
+  padding-left: calc(12px + 20px);
   background: url(../img/delivery-pizza-car.svg);
   background-repeat: no-repeat;
   background-position: left;
-  background-size: cover;
 }
 
 /* hero order button */
@@ -70,17 +67,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 109px;
-  height: 36px;
+  /* width: 109px; */
+  /* height: 36px; */
   border-radius: 32px;
   padding: 8px 24px;
   color: var(--orange);
   background-color: var(--light);
-
-  font-size: 14px;
   font-weight: 600;
-  line-height: 140%;
-  letter-spacing: 0%;
-  text-align: left;
+  font-size: 14px;
   cursor: pointer;
 }
